--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Alphabet ID</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
-  <ul>
-  </ul>
+  <ul></ul>
   <script src="js/main.js"></script>
 </body>
 
